Adicionando mais seções na página inicial do site

--- a/website/index.html
+++ b/website/index.html
@@ -5,24 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
+    <title>Mine Guide - Home</title>
 
+    <link rel="shortcut icon" href="assets/icons/icon-mine-guide.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style-home.css">
 </head>
 
 <body>
 
-    <div class="first-screen">
-
+    <!-- --=| SEÇÃO: TELA INICIAL -->
+    <div class="first-screen" id="first">
         <nav>
             <div class="container">
 
                 <div class="links">
-                    <a href="">
+                    <a href="#first">
                         INÍCIO
                     </a>
 
-                    <a href="">
+                    <a href="#about-game">
                         JOGO
                     </a>
 
@@ -56,9 +57,10 @@
         <div class="onda-one">
             <img src="assets/img/onda-1.png" alt="">
         </div>
-
     </div>
 
+
+    <!-- --=| SEÇÃO: COMO FUNCIONA? -->
     <div class="how-work">
         <div class="container">
 
@@ -93,6 +95,157 @@
             </div>
 
         </div>
+    </div>
+
+
+    <!-- --=| SEÇÃO: NÍVEIS DE DICAS -->
+    <div class="tips-area">
+        <div class="container">
+
+            <div class="container-title">
+                <h1>NÍVEIS DE DICAS</h1>
+            </div>
+
+            <div class="container-main">
+
+                <div class="image-main">
+                    <img src="assets/img/steve-3d.png" alt="Steve Minecraft">
+                </div>
+
+                <div class="cards-tips">
+
+                    <div class="cards">
+                        <div class="card-image">
+                            <div class="fundo">
+                                <img src="assets/img/peitoral-couro.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="card-text">
+                            <h3>Nível - Couro</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
+                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                        </div>
+                    </div>
+
+                    <div class="cards">
+                        <div class="card-image">
+                            <div class="fundo">
+                                <img src="assets/img/peitoral-ferro.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="card-text">
+                            <h3>Nível - Ferro</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
+                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                        </div>
+                    </div>
+
+                    <div class="cards">
+                        <div class="card-image">
+                            <div class="fundo">
+                                <img src="assets/img/peitoral-diamante.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="card-text">
+                            <h3>Nível - Diamante</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
+                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                        </div>
+                    </div>
+
+                    <div class="cards">
+                        <div class="card-image">
+                            <div class="fundo">
+                                <img src="assets/img/peitoral-netherite.png" alt="">
+                            </div>
+                        </div>
+
+                        <div class="card-text">
+                            <h3>Nível - Netherite</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
+                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                        </div>
+                    </div>
+
+                    <button>OBTER DICAS</button>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- --=| SEÇÃO: SOBRE O JOGO -->
+    <div class="about-game">
+        <div class="onda-two">
+            <img src="assets/img/onda-2.png" alt="Onda Divisória">
+        </div>
+
+        <div class="container" id="about-game">
+
+            <div class="title-about">
+                <h1>SOBRE O JOGO</h1>
+            </div>
+
+            <div class="container-about">
+                <div class="cards-about">
+
+                    <div class="card">
+
+                        <div class="image">
+                            <img src="assets/img/card1.png" alt="">
+                        </div>
+
+                        <div class="text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                        </div>
+
+                    </div>
+
+
+                    <div class="card">
+
+                        <div class="image">
+                            <img src="assets/img/card2.png" alt="">
+                        </div>
+
+                        <div class="text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                        </div>
+
+                    </div>
+
+
+                    <div class="card">
+
+                        <div class="image">
+                            <img src="assets/img/card3.png" alt="">
+                        </div>
+
+                        <div class="text">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="button">
+                    <button><a href="https://minecraft.fandom.com/pt/wiki/Minecraft_Wiki" target="_blank">MAIS INFO</a></button>
+                </div>
+
+            </div>
+
+
+        </div>
+
+
+
+    </div>
     </div>
 
 
