Modificando a página inicial

--- a/website/index.html
+++ b/website/index.html
@@ -15,9 +15,42 @@
 
 <body>
 
+    
+    <nav>
+        <div class="container">
+
+            <div class="logo">
+                <a href=""><img src="assets/img/icon-mine-guide.png" alt=""></a>
+            </div>
+
+            <div class="links">
+                <a href="">
+                    INÍCIO
+                </a>
+
+                <a href="">
+                    JOGO
+                </a>
+
+                <a href="">
+                    SOBRE
+                </a>
+
+                <a href="">
+                    SOLUÇÃO
+                </a>
+
+                <a href="">
+                    <img src="assets/icons/icon-creeper-navbar.png" alt="" id="icon-navbar">
+                </a>
+            </div>
+
+        </div>
+    </nav>
+
     <!-- --=| SEÇÃO: TELA INICIAL -->
     <div class="first-screen" id="first">
-        <div class="nav">
+        <!-- <div class="nav">
             <div class="container">
 
                 <div class="links-fixed">
@@ -47,7 +80,8 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
+  
 
         <section>
             <div class="container">
@@ -341,7 +375,7 @@
         </div>
     </footer>
 
-
+    <script src="js/script-navbar.js"></script>
 
 
 </body>
