--- a/website/index.html
+++ b/website/index.html
@@ -20,15 +20,15 @@
         <div class="container">
 
             <div class="logo">
-                <a href=""><img src="assets/img/icon-mine-guide.png" alt=""></a>
+                <a href="#first"><img src="assets/img/icon-mine-guide.png" alt=""></a>
             </div>
 
             <div class="links">
-                <a href="">
+                <a href="#first">
                     INÍCIO
                 </a>
 
-                <a href="">
+                <a href="#about-game">
                     JOGO
                 </a>
 
@@ -36,8 +36,8 @@
                     SOBRE
                 </a>
 
-                <a href="">
-                    SOLUÇÃO
+                <a href="#sugestoes">
+                    SUGESTÕES
                 </a>
 
                 <a href="">
@@ -345,7 +345,7 @@
                     INÍCIO
                 </a>
 
-                <a href="">
+                <a href="#about-game">
                     JOGO
                 </a>
 
@@ -353,8 +353,8 @@
                     SOBRE
                 </a>
 
-                <a href="">
-                    SOLUÇÃO
+                <a href="#sugestoes">
+                    SUGESTÕES
                 </a>
             </div>
 
