Finalizando a página - Sobre

--- a/website/index.html
+++ b/website/index.html
@@ -19,11 +19,11 @@
         <div class="container">
 
             <div class="logo">
-                <a href="#first"><img src="assets/img/icon-mine-guide.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/icon-mine-guide.png" alt=""></a>
             </div>
 
             <div class="links">
-                <a href="#first">
+                <a href="index.html">
                     INÍCIO
                 </a>
 
@@ -31,7 +31,7 @@
                     JOGO
                 </a>
 
-                <a href="">
+                <a href="about.html">
                     SOBRE
                 </a>
 
@@ -49,46 +49,13 @@
 
     <!-- --=| SEÇÃO: TELA INICIAL -->
     <div class="first-screen" id="first">
-        <!-- <div class="nav">
-            <div class="container">
-
-                <div class="links-fixed">
-                    <a href="#first">
-                        INÍCIO
-                    </a>
-
-                    <a href="#about-game">
-                        JOGO
-                    </a>
-
-                    <a href="">
-                        SOBRE
-                    </a>
-
-                    <a href="">
-                        SOLUÇÃO
-                    </a>
-
-                    <a href="#sugestoes">
-                        SUGESTÕES
-                    </a>
-
-                    <a href="">
-                        <img src="assets/icons/icon-creeper-navbar.png" alt="" id="icon-navbar">
-                    </a>
-                </div>
-
-            </div>
-        </div> -->
-  
 
         <section>
             <div class="container">
                 <div class="image-main">
 
                     <img src="assets/img/logo-fundo-branco.png" alt="Logo Mine Guide">
-                    <h2>O MELHOR AMIGO DA SUA AVENTURA</h2>
-
+                    <h2>APRENDA, EXPLORE E DIVIRTA-SE COM A MINEGUIDE</h2>
                 </div>
             </div>
         </section>
@@ -335,12 +302,12 @@
         <div class="container">
 
             <div class="logo">
-                <a href=""><img src="assets/img/icon-mine-guide.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/icon-mine-guide.png" alt=""></a>
                 <p>Mine Guide © 2023</p>
             </div>  
 
             <div class="links">
-                <a href="">
+                <a href="index.html">
                     INÍCIO
                 </a>
 
@@ -348,7 +315,7 @@
                     JOGO
                 </a>
 
-                <a href="">
+                <a href="about.html">
                     SOBRE
                 </a>
 
