--- a/website/about.html
+++ b/website/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,21 +11,22 @@
     <link rel="stylesheet" href="css/style-scrollbar.css">
     <link rel="stylesheet" href="css/style-about.css">
 </head>
+
 <body>
 
     <nav>
         <div class="container">
 
             <div class="logo">
-                <a href=""><img src="assets/img/icon-mine-guide.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/icon-mine-guide.png" alt=""></a>
             </div>
 
             <div class="links">
-                <a href="">
+                <a href="index.html">
                     INÍCIO
                 </a>
 
-                <a href="">
+                <a href="index.html#about-game">
                     JOGO
                 </a>
 
@@ -32,8 +34,8 @@
                     SOBRE
                 </a>
 
-                <a href="">
-                    SOLUÇÃO
+                <a href="index.html#sugestoes">
+                    SUGESTÕES
                 </a>
 
                 <a href="">
@@ -58,21 +60,152 @@
             <div class="container-cards">
                 <div class="card">
                     <div class="back-image">
-                        <img src="" alt="">
+                        <img src="assets/img/steve-vetor.png" alt="">
                     </div>
 
                     <div class="text-box">
-                        <h1></h1>
-                        <p></p>
+                        <h1>SOBRE O CRIADOR</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
+                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
                     </div>
                 </div>
 
-                <div class="card"></div>
+                <div class="card2">
+                    <div class="back-image">
+                        <img src="assets/img/ovelha-vetor.png" alt="">
+                    </div>
+
+                    <div class="text-box">
+                        <h1>ESCOLHE DO TEMA</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
+                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                    </div>
+                </div>
             </div>
 
         </div>
     </div>
 
-    
+
+    <div class="personal-values">
+        <div class="container">
+
+            <div class="title">
+                <h1>VALORES PESSOAIS</h1>
+            </div>
+
+            <div class="values">
+                <div class="box">
+                    <img src="assets/icons/criatividade-icon.png" alt="">
+                    <h3>CRIATIVIDADE</h3>
+                </div>
+
+                <div class="box">
+                    <img src="assets/icons/simplicidade-icon.png" alt="">
+                    <h3>SIMPLICIDADE</h3>
+                </div>
+
+                <div class="box">
+                    <img src="assets/icons/determinacao-icon.png" alt="">
+                    <h3>DETERMINAÇÃO</h3>
+                </div>
+
+                <div class="box">
+                    <img src="assets/icons/independencia-icon.png" alt="">
+                    <h3>INDEPENDÊNCIA</h3>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="problem">
+
+        <div class="onda-two">
+            <img src="assets/img/onda-3.png" alt="">
+        </div>
+
+        <div id="problem">
+            <div class="container">
+
+                <div class="cards">
+                    <div class="back-image">
+                        <img src="assets/img/zombie-vetor.png" alt="">
+                    </div>
+                    <div class="text-box">
+                        <h1>PROBLEMA ENCONTRADO</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
+                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                    </div>
+                </div>
+
+                <div class="cards2">
+                    <div class="back-image">
+                        <img src="assets/img/skeleton-vetor.png" alt="">
+                    </div>
+                    <div class="text-box">
+                        <h1>SOLUÇÃO PROPOSTA</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
+                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                    </div>
+                </div>
+
+                <div class="button">
+                    <button>OBTER DICAS</button>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+
+    <footer>
+        <div class="container">
+
+            <div class="logo">
+                <a href=""><img src="assets/img/icon-mine-guide.png" alt=""></a>
+                <p>Mine Guide © 2023</p>
+            </div>
+
+            <div class="links">
+                <a href="">
+                    INÍCIO
+                </a>
+
+                <a href="index.html#about-game">
+                    JOGO
+                </a>
+
+                <a href="about.html">
+                    SOBRE
+                </a>
+
+                <a href="index.html#sugestoes">
+                    SUGESTÕES
+                </a>
+            </div>
+
+            <div class="social-links">
+                <a href="">
+                    <img src="assets/icons/icon-insta.png" alt="">
+                </a>
+
+                <a href="">
+                    <img src="assets/icons/icon-zap.png" alt="">
+                </a>
+
+                <a href="">
+                    <img src="assets/icons/icon-gmail.png" alt="">
+                </a>
+            </div>
+
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
