Finalizando a tela de Login e Cadastro

--- a/website/login.html
+++ b/website/login.html
@@ -40,12 +40,12 @@
                         <div class="inputs">
                             <div class="input">
                                 <p>Email:</p>
-                                <input type="text">
+                                <input type="text" placeholder="seuemail@email">
                             </div>
 
                             <div class="input">
                                 <p>Senha:</p>
-                                <input type="text">
+                                <input type="password" placeholder="******">
                             </div>
 
                         </div>
@@ -59,7 +59,7 @@
 
 
                     <div class="link">
-
+                        <p>Não possui cadastro? Crie um <a href="register.html">aqui</a></p>
                     </div>
 
                 </div>
