--- a/website/about.html
+++ b/website/about.html
@@ -38,7 +38,7 @@
                     SUGESTÕES
                 </a>
 
-                <a href="">
+                <a href="login.html">
                     <img src="assets/icons/icon-creeper-navbar.png" alt="" id="icon-navbar">
                 </a>
             </div>
