--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
                     SUGESTÕES
                 </a>
 
-                <a href="">
+                <a href="login.html">
                     <img src="assets/icons/icon-creeper-navbar.png" alt="" id="icon-navbar">
                 </a>
             </div>
