--- a/website/login.html
+++ b/website/login.html
@@ -26,7 +26,9 @@
                 <div class="form">
 
                     <div class="top">
-                        <img src="assets/icons/icon-back.png" alt="">
+                        <a href="index.html">
+                            <img src="assets/icons/icon-back.png" alt="">
+                        </a>
                     </div>
 
 
