--- a/website/register.html
+++ b/website/register.html
@@ -26,7 +26,9 @@
                 <div class="form">
 
                     <div class="top">
-                        <img src="assets/icons/icon-back.png" alt="">
+                        <a href="login.html">
+                            <img src="assets/icons/icon-back.png" alt="">
+                        </a>
                     </div>
 
 
