Colocando os textos adicionais na página

--- a/website/about.html
+++ b/website/about.html
@@ -64,9 +64,8 @@
                     </div>
 
                     <div class="text-box">
-                        <h1>SOBRE O CRIADOR</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
-                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                        <h1>PRIMEIRO CONTATO</h1>
+                        <p>O jogo em si está presente na minha vida desde 2016. Tudo começou quando um amigo me apresentou um youtuber chamado Rezendeevil e sua série chamada “Paraíso”, fiquei encantado pelo jogo e por tudo aquilo que ele estava fazendo, a partir daquele momento comecei a acompanhar a série e outros youtubers que faziam conteúdo sobre o Minecraft na época. </p>
                     </div>
                 </div>
 
@@ -77,8 +76,7 @@
 
                     <div class="text-box">
                         <h1>ESCOLHE DO TEMA</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
-                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                        <p>A escolha desse tema foi pelo carinho imenso que tenho por esse jogo, é algo que se faz muito presente na minha vida, seja jogando ou assistindo. Gosto de juntar com meus amigos e passar a tarde toda construindo um novo mundo. </p>
                     </div>
                 </div>
             </div>
@@ -136,8 +134,7 @@
                     </div>
                     <div class="text-box">
                         <h1>PROBLEMA ENCONTRADO</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
-                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                        <p>Apesar de ser um jogo que explora a criatividade do jogador, caso ele não saiba o que fazer durante a jogatina, pode acabar “abandonando” por tédio ou frustação.</p>
                     </div>
                 </div>
 
@@ -147,8 +144,9 @@
                     </div>
                     <div class="text-box">
                         <h1>SOLUÇÃO PROPOSTA</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec viverra quam sapien, commodo
-                            varius purus dignissim quis. Ut vestibulum ut est sed posuere.</p>
+                        <p>Mostrar de forma simples e clara, coisas que os jogadores podem fazer durante a sua jogatina. 
+
+                            Estaremos ranqueando em níveis para facilitar a busca por essas instruções e também para englobar todos os tipos de jogadores.</p>
                     </div>
                 </div>
 
