--- a/website/index.html
+++ b/website/index.html
@@ -81,17 +81,13 @@
                         <img src="assets/img/minecraft-villager-1.png" alt="">
                     </div>
                     <div class="text-card">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio facere veniam magni
-                            mollitia eius iste nihil nesciunt saepe! Rerum quia nihil ab vitae blanditiis non et facere
-                            assumenda voluptates.</p>
+                        <p>A Mine Guide tem como objetivo mostrar de forma simples e clara, coisas que os jogadores podem fazer durante a sua jogatina. Claro, tudo isso com base no nível daquele jogador.</p>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="text-card">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate optio facere veniam magni
-                            mollitia eius iste nihil nesciunt saepe! Rerum quia nihil ab vitae blanditiis non et facere
-                            assumenda voluptates.</p>
+                        <p>Nossa missão é fazer com que todos os tipos de jogadores possam desfurtar de nossas dicas, estimulando toda a criatividade e possibilidades que o jogo permite ter dentro dele. </p>
                     </div>
                     <div class="imagem">
                         <img src="assets/img/minecraft-villager-2.png" alt="" class="imagem-dois">
@@ -129,8 +125,7 @@
 
                         <div class="card-text">
                             <h3>Nível - Couro</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
-                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                            <p>Para pessoas que possuem pouco ou nenhum contato com o jogo. Daremos os primeiros passos para que esse jogador tenha uma boa experiência. </p>
                         </div>
                     </div>
 
@@ -143,8 +138,7 @@
 
                         <div class="card-text">
                             <h3>Nível - Ferro</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
-                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                            <p>Dicas mais detalhadas para aqueles jogadores que já passaram pela experiência de novato e tem uma familiaridade maior com o jogo.</p>
                         </div>
                     </div>
 
@@ -157,8 +151,7 @@
 
                         <div class="card-text">
                             <h3>Nível - Diamante</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
-                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                            <p>Dicas estarão um pouco mais complexas, pois trataremos o jogador como um conhecedor do jogo, tendo experiência o suficiente para cumpri-las. </p>
                         </div>
                     </div>
 
@@ -171,8 +164,7 @@
 
                         <div class="card-text">
                             <h3>Nível - Netherite</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur quas cumque
-                                laboriosam dolor blanditiis! Accusamus sapiente nisi, esse fugit.</p>
+                            <p>Experientes que já possuem um conhecimento muito avançado dentro do jogo, porém precisam de um caminho para não enjoarem do game por completo. </p>
                         </div>
                     </div>
 
@@ -207,7 +199,7 @@
                         </div>
 
                         <div class="text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                            <p>Um jogo aberto onde os jogadores decidem por conta própria o que querem fazer!</p>
                         </div>
 
                     </div>
@@ -220,7 +212,7 @@
                         </div>
 
                         <div class="text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                            <p>Explore o mundo, pegue recursos, crie máquinas e grandes contruções!</p>
                         </div>
 
                     </div>
@@ -233,7 +225,7 @@
                         </div>
 
                         <div class="text">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam, laudantium! Eum.</p>
+                            <p>Enfrente chefes e monstros durante a sua jornada para se tornar mais forte!</p>
                         </div>
 
                     </div>
@@ -268,7 +260,7 @@
                 <div class="form" >
                     <div class="text-box">
                         <h2>SUGESTÕES</h2>
-                        <p>Possui alguma sugestão para que nossa equipe melhore no site? Nos envie através desse
+                        <p>Possui alguma sugestão para que nossa equipe melhore o site? Nos envie através desse
                             formulário!</p>
                     </div>
 
