--- a/website/register.html
+++ b/website/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mine Guide - Login</title>
+    <title>Mine Guide - Cadastro</title>
 
     <link rel="shortcut icon" href="assets/icons/icon-mine-guide.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style-scrollbar.css">
