Arrumando os gráficos

--- a/website/user-local/index.html
+++ b/website/user-local/index.html
@@ -430,8 +430,8 @@
                 color: 'white',
                 data: [12, 19, 3, 5, 2],
                 borderWidth: 1,
-                borderColor: 'white',
-                backgroundColor: ['#9BD0F5', '#E9881A', '#4AEDD9', 'white', 'blue']
+                borderColor: '#1E1E1E',
+                backgroundColor: ['#3675bc', '#b64b9b', '#f47a20', '#69bd63', '#f5ea03']
             }]
         },
         options: {
@@ -463,8 +463,8 @@
                 color: 'white',
                 data: [12, 19, 3, 5, 2],
                 borderWidth: 1,
-                borderColor: 'white',
-                backgroundColor: ['#9BD0F5', '#E9881A', '#4AEDD9', 'white', 'blue']
+                borderColor: '#1E1E1E',
+                backgroundColor: ['#36a8d9', '#fbad39', '#ed4c40', '#5c78bd', '#d7e458']
             }]
         },
         options: {
